force-app/main/default/objects/Auto_parts__c/Auto_parts__c.object-meta.xml
<CustomObject>
    <label>Auto parts</label>
    <nameField>
        <label>Auto parts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Auto parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>