force-app/main/default/objects/Auto_parts__c/fields/Customer_email__c.field-meta.xml
<CustomField>
    <fullName>Customer_email__c</fullName>
    <label>Customer email</label>
    <type>Email</type>
</CustomField>