force-app/main/default/objects/Auto_parts__c/fields/Make_date__c.field-meta.xml
<CustomField>
    <fullName>Make_date__c</fullName>
    <label>Make date</label>
    <type>Date</type>
</CustomField>