force-app/main/default/objects/Auto_parts__c/fields/Parts_Desc__c.field-meta.xml
<CustomField>
    <fullName>Parts_Desc__c</fullName>
    <label>Parts Desc</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>