force-app/main/default/objects/Auto_parts__c/fields/Parts_Description__c.field-meta.xml
<CustomField>
    <fullName>Parts_Description__c</fullName>
    <label>Parts Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>