force-app/main/default/objects/Auto_parts__c/fields/Parts_Id__c.field-meta.xml
<CustomField>
    <fullName>Parts_Id__c</fullName>
    <displayFormat>Model-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>Parts Id</label>
    <type>AutoNumber</type>
</CustomField>