force-app/main/default/objects/Auto_parts__c/fields/Parts_Model1__c.field-meta.xml
<CustomField>
    <fullName>Parts_Model1__c</fullName>
    <complianceGroup>PII;HIPAA;PCI;COPPA</complianceGroup>
    <defaultValue>false</defaultValue>
    <label>Parts Model1</label>
    <type>Checkbox</type>
</CustomField>