force-app/main/default/objects/Auto_parts__c/fields/Parts_Model__c.field-meta.xml
<CustomField>
    <fullName>Parts_Model__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Parts Model</label>
    <type>Checkbox</type>
</CustomField>