force-app/main/default/objects/Auto_parts__c/fields/Parts_of__c.field-meta.xml
<CustomField>
    <fullName>Parts_of__c</fullName>
    <label>Parts of</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Honda</fullName>
                <default>true</default>
                <label>Honda</label>
            </value>
            <value>
                <fullName>Bazaj</fullName>
            </value>
            <value>
                <fullName>Hero</fullName>
            </value>
            <value>
                <fullName>Yamaha</fullName>
            </value>
            <value>
                <fullName>BMW</fullName>
            </value>
            <value>
                <fullName>MAN</fullName>
            </value>
            <value>
                <fullName>Toyota</fullName>
            </value>
            <value>
                <fullName>Nissan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>