force-app/main/default/objects/Auto_parts__c/fields/Your_Comment__c.field-meta.xml
<CustomField>
    <fullName>Your_Comment__c</fullName>
    <label>Your Comment</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>